--- a/templates/site.layout.twig
+++ b/templates/site.layout.twig
@@ -36,7 +36,39 @@
                 </div>
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
-                        <li><a href="/">Главная</a></li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Товары <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/goods/list">Просмотр товаров</a></li>
+                                {% if currentUser %}
+                                    <li><a href="/goods/add">Добавить товар</a></li>
+                                {% endif %}
+                            </ul>
+                        </li>
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                Магазины <span class="caret"></span>
+                            </a>
+                            <ul class="dropdown-menu">
+                                <li><a href="/shops/list">Просмотр магазинов</a></li>
+                                {% if currentUser %}
+                                    <li><a href="/shops/add">Добавить магазин</a></li>
+                                {% endif %}
+                            </ul>
+                        </li>
+                        {% if currentUser %}
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                                    Покупки <span class="caret"></span>
+                                </a>
+                                <ul class="dropdown-menu">
+                                    <li><a href="/sales/list">Мои покупки</a></li>
+                                    <li><a href="/sales/add">Добавить покупку</a></li>
+                                </ul>
+                            </li>
+                        {% endif %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {% if currentUser %}
