--- a/templates/sales/add.twig
+++ b/templates/sales/add.twig
@@ -7,7 +7,7 @@
         <form method="post">
             <div class="form-group">
                 <label>Продукт</label>
-                <input class="form-control" name="good_id">
+                <select class="form-control" name="good_id"></select>
             </div>
             <div class="form-group">
                 <label>Магазин</label>
