--- a/templates/site.layout.twig
+++ b/templates/site.layout.twig
@@ -10,6 +10,8 @@
     <!-- Bootstrap -->
     <link href="/assets/bootstrap/css/bootstrap.min.css" rel="stylesheet">
     <link href="/css/screen.css" rel="stylesheet">
+    <link href="/css/selectize/selectize.css" rel="stylesheet">
+    <link href="/css/selectize/selectize.bootstrap3.css" rel="stylesheet">
 
     <!-- HTML5 shim and Respond.js for IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
