--- a/templates/sales/add.twig
+++ b/templates/sales/add.twig
@@ -11,7 +11,7 @@
             </div>
             <div class="form-group">
                 <label>Магазин</label>
-                <input class="form-control" name="shop_id">
+                <select class="form-control" name="shop_id"></select>
             </div>
             <div class="form-group">
                 <label>Цена</label>
