--- a/templates/goods/edit.twig
+++ b/templates/goods/edit.twig
@@ -22,6 +22,25 @@
                 <input class="form-control" name="title" value="{{ good.title }}">
             </div>
             <div class="form-group">
+                <label>Продается ли товар в фиксированной упаковке?</label>
+                <select class="form-control" name="packed">
+                    <option {% if good.packed == 0 %}selected{% endif %} value="0">Нет, товар продает на разновес либо в упаковках с разным весом</option>
+                    <option {% if good.packed == 1 %}selected{% endif %} value="1">Да, товар продается фиксирванными упаковками</option>
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Единица измерения</label>
+                <select class="form-control" name="unit">
+                    {% for unit in units %}
+                        <option {% if unit.id == good.unit %}selected{% endif %} value="{{ unit.id }}">{{ unit.title }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+            <div class="form-group">
+                <label>Количество в упаковке</label>
+                <input class="form-control" name="pack_volume" value="{{ good.pack_volume }}">
+            </div>
+            <div class="form-group">
                 <input type="hidden" name="id" value="{{ good.id }}">
                 <button class="btn btn-success">Сохранить</button>
             </div>
